// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a new customer address 1`] = `
<div
  className="grid-row"
  key="rownew"
>
  <EditModelRow
    model={
      Object {
        "customer": 12,
      }
    }
    modelFields={
      Array [
        Object {
          "error": "At least one line of address must be entered",
          "fieldName": "address1",
          "header": "Address",
          "length": 100,
          "required": true,
          "type": "text",
        },
        Object {
          "fieldName": "address2",
          "header": "Line 2",
          "length": 100,
          "type": "text",
        },
        Object {
          "fieldName": "address3",
          "header": "Line 3",
          "length": 100,
          "type": "text",
        },
        Object {
          "fieldName": "address4",
          "header": "Line 4",
          "length": 100,
          "type": "text",
        },
        Object {
          "error": "A country must be selected",
          "fieldName": "country",
          "header": "Country",
          "required": true,
          "type": "country",
        },
        Object {
          "fieldName": "postcode",
          "header": "Postcode",
          "length": 20,
          "type": "text",
          "validator": [Function],
          "validatorAdditionalFields": Array [
            "country",
          ],
        },
      ]
    }
    onChange={[Function]}
    persistedModel={Object {}}
  />
  <div
    className="grid-item"
    key="date_new"
  >
    <span
      id="comment_td_new"
    >
      Add a new address
    </span>
  </div>
  <div
    className="grid-item align_center"
    key="actions_td_new"
  >
    <span
      id="actionsnew"
    />
  </div>
</div>
`;

exports[`renders correctly with a passed customer address 1`] = `
<div
  className="grid-row"
  key="row123"
>
  <EditModelRow
    model={
      Object {
        "address1": "line one",
        "address2": "line Ywo",
        "address3": "line Three",
        "address4": "line Four",
        "customer": 6,
        "id": 123,
        "postcode": "xxxyyy",
      }
    }
    modelFields={
      Array [
        Object {
          "error": "At least one line of address must be entered",
          "fieldName": "address1",
          "header": "Address",
          "length": 100,
          "required": true,
          "type": "text",
        },
        Object {
          "fieldName": "address2",
          "header": "Line 2",
          "length": 100,
          "type": "text",
        },
        Object {
          "fieldName": "address3",
          "header": "Line 3",
          "length": 100,
          "type": "text",
        },
        Object {
          "fieldName": "address4",
          "header": "Line 4",
          "length": 100,
          "type": "text",
        },
        Object {
          "error": "A country must be selected",
          "fieldName": "country",
          "header": "Country",
          "required": true,
          "type": "country",
        },
        Object {
          "fieldName": "postcode",
          "header": "Postcode",
          "length": 20,
          "type": "text",
          "validator": [Function],
          "validatorAdditionalFields": Array [
            "country",
          ],
        },
      ]
    }
    onChange={[Function]}
    persistedModel={
      Object {
        "address1": "line one",
        "address2": "line Ywo",
        "address3": "line Three",
        "address4": "line Four",
        "customer": 6,
        "id": 123,
        "postcode": "xxxyyy",
      }
    }
  />
  <div
    className="grid-item"
    key="date_123"
  >
    <span
      id="comment_td_123"
    >
      Add a new address
    </span>
  </div>
  <div
    className="grid-item align_center"
    key="actions_td_123"
  >
    <span
      id="actions123"
    >
      <Icon
        as="i"
        id="delete-address123"
        name="delete"
        onClick={[Function]}
        title="Delete Address Number"
      />
    </span>
  </div>
</div>
`;
